Trying to align the text and img, unsure if I'm using the correct t technique. I will have to review flexbox again for help. Page also doesnt resize properly when window is minimized.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 150px 290px 150px; 
+    padding: 0px 150px; 
   }
   
   .header h1 {
@@ -42,3 +42,25 @@ body {
     font-size: 24px;
   }
   
+  .heading {
+    background-color: #1F2937;
+    color: #FFF;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 150px;
+  }
+
+  .heading h1 {
+    font-size: 48px;
+    font-weight: extra-bold;
+    margin: 0;
+    padding-top: 100px;
+  }
+
+  .heading img {
+    display: flex;
+    padding: 100px 150px 100px 100px;
+    max-width: 500px;
+    max-height: 500px;
+    
+  }
